checkbox (0.15.5) raring; urgency=low

  [ Brendan Donegan ]
  * Incremented version number.

  [Sylvain Pineau]
  * scripts/udev_resource: Set the decoding error policy to 'ignore' to avoid
    breaking tests that depends on the udevadm resource (LP: #1151562)

  [ Daniel Manrique ]
  * scripts/glob_test: Fixed swapping of repetitions and time parameters.
    jobs/benchmarks.txt.in: Set a 26 FPS threshold for passing globs
    benchmark.

 -- Brendan Donegan <brendan.donegan@canonical.com>  Thu, 07 Mar 2013 16:04:46 +0000

checkbox (0.15.4) raring; urgency=low

  * New upstream release (LP: #1152223)

  [ Brendan Donegan ]
  * Incremented version number.

  [ Daniel Manrique ]
  * Added pipefail option to a few jobs using ansi_parser (LP: #1131598)
  * Added sru.whitelist used to test stable release update kernels.

  [ Jeff Marcom ]
  * jobs/input.txt.in Added job requirement for accelerometer test (LP: #1135832)

  [Sylvain Pineau]
  * scripts/network_device_info, scripts/udev_resource,
    checkbox/parsers/udevadm.py: Use udev to categorise network devices instead
    of lspci (LP: #1091633)
  
  [Jeff Lane]
  * jobs/various: Changed the jobs that use removable_storage_watcher to
    generate ~256MB files to combat problems where the files are cached and not
    written directly to devices during test. (LP: #1149213)

 -- Jeff Marcom <jeff.marcom@ubuntu.com>  Mon, 18 Feb 2013 14:35:27 +0000

checkbox (0.15.3) raring; urgency=low

  * New upstream release (LP: #1131801)

  [ Daniel Manrique ]
  * scripts/pts_run: modified to output the full log from phoronix-test-suite
    (LP: #1102819)

 -- Daniel Manrique <roadmr@ubuntu.com>  Fri, 08 Feb 2013 13:37:38 -0500

checkbox (0.15.2) raring; urgency=low

  * New upstream release (LP: #1119529)

  [ Daniel Manrique ]
  * Bumped revision number to 0.15.1 and restored previous trunk changelog.
  * jobs/peripheral.txt.in: fixed string with repeated "add" (LP: #1102665) 